--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
+.header {
   text-align: center;
+  margin-top: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input-box {
+  height: 20px;
+
+  border: 1px solid gray;
+  border-radius: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.add-button {
+  height: 25px;
+
+  border: 1px solid black;
+  border-radius: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo-box {
+  margin: 0 0 0 20px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.todo-card {
+  width: 120px;
+  height: 120px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border: 2px solid green;
+  border-radius: 10px;
+
+  padding: 10px;
+
+  text-align: center;
+  font-size: 18px;
 }
